One more overflow issue resolved.

--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -8,7 +8,7 @@ html {
     font-size: 125%;
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
-    
+    overflow-x: hidden;
 }
 
 body {
