--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,7 @@ html {
   font-size: 125%;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
